--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
                  <span class="group-hover:text-indigo-600">Users</span>              
                 </a>
    
-                <a href="#" class="flex space-x-3 items-center p-2 hover:bg-slate-100 rounded-md text-slate-700 group transition">
+                <a href="statistics.html" class="flex space-x-3 items-center p-2 hover:bg-slate-100 rounded-md text-slate-700 group transition">
                  <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-slate-500 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
                      <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
@@ -73,7 +73,7 @@
               </svg>
               <span class="group-hover:text-indigo-600">Help &amp; Support</span>              
              </a>
-             <a href="#" class="flex space-x-3 items-center p-2 hover:bg-slate-100 rounded-md text-slate-700 group transition">
+             <a href="credits.html" class="flex space-x-3 items-center p-2 hover:bg-slate-100 rounded-md text-slate-700 group transition">
               <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-slate-500 group-hover:text-indigo-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" />
               </svg>
@@ -82,8 +82,8 @@
           </div>
           <div class="p-4">
             <div class="flex items-center">
-              <div class="h-12 w-12 rounded-full bg-slate-200 shrink-0 overflow-hidden">
-                <img src="https://avatars.dicebear.com/api/initials/Winter-Doe.svg?&width=48&height=48" alt="" loading="lazy" class="object-fit">
+              <div class="h-10 w-10 rounded-full bg-slate-200 shrink-0 overflow-hidden">
+                <img src="https://avatars.dicebear.com/api/initials/Winter-Doe.svg?&width=40&height=40" alt="" loading="lazy" class="object-fit">
               </div>
               <div class="flex-1 px-2 overflow-hidden">
                 <div class="text-sm font-medium truncate text-slate-800">Winter Doe</div>
@@ -130,7 +130,7 @@
 				x-init="$nextTick(() => parseMarkdown())"
 				x-cloak
 			>
-			<div x-ref="mdContent" id="mdContent" class="prose prose-indigo"></div>
+			<div x-ref="mdContent" id="mdContent" class="prose prose-indigo max-w-3xl"></div>
 			</div>
           <!-- ./Markdown -->
 
@@ -142,7 +142,7 @@
       const mdSample = `
 ### Effective Date: [Insert effective date]
 
-This privacy policy ("Policy") describes how [Insert company name] ("us", "we", or "our") collects, uses, and shares information about you when you use our website [Insert website URL] and any of our related mobile applications, including our Android app (the "App") available for download on the Google Play Store (collectively, the "Site").
+This privacy policy ("Policy") describes how [Insert company name] ("us", "we", or "our") collects, uses, and shares information about you when you use our website [http://example.com](http://example.com) and any of our related mobile applications, including our Android app (the "App") available for download on the Google Play Store (collectively, the "Site").
 
 Please read this Policy carefully to understand our policies and practices regarding your information and how we will treat it. If you do not agree with our policies and practices, do not use the Site. By accessing or using the Site, you agree to this Policy. This Policy may change from time to time (see "Changes to Our Privacy Policy" below). Your continued use of the Site after we make changes is deemed to be acceptance of those changes, so please check the Policy periodically for updates.
 
